--- a/src/components/about.css
+++ b/src/components/about.css
@@ -1,5 +1,6 @@
 .container {
     width: 1080px;
+    display: flex;
 }
 
 .main {
@@ -9,4 +10,9 @@
 
 .border-color{
     border-color: #64FFDA;
+}
+
+.dev-img {
+    height: 368px;
+    width: 448px;
 }
