--- a/src/components/about-me.css
+++ b/src/components/about-me.css
@@ -13,6 +13,15 @@
     height: 378px;
 }
 
+.me-img-m {
+    width: 220px;
+    height: 220px;
+}
+
 .about-para {
     width: 540px;
+}
+
+.bullet-m {
+    width: 40%;
 }
