--- a/src/components/work.css
+++ b/src/components/work.css
@@ -22,6 +22,18 @@
     border-left: 2px solid #8892B0;
 }
 
+.work-title-selected-m {
+    height: 40px;
+    width: auto;
+    border-bottom: 3px solid #64FFDA;
+}
+
+.work-title-m {
+    height: 40px;
+    width: auto;
+    border-bottom: 2px solid #8892B0;
+}
+
 .points {
     width: 720px;
 }
