--- a/src/components/education.css
+++ b/src/components/education.css
@@ -14,6 +14,12 @@
 
 .divider {
     width: 2px;
+    height: 350px;
+    border-radius: 10;
+}
+
+.divider-m {
+    width: 2px;
     height: 250px;
     border-radius: 10;
 }
